# Playground

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  _mapping_  content_package_1.pak  default.scene  dummy.scene.json  input.ini  vcpkg.json
app/: CMakeLists.txt  app.cxx  executable_path.cxx
app/include/app/: executable_path.hxx
core/: CMakeLists.txt
core/editor/assetdatabase/: CMakeLists.txt
core/editor/assetdatabase/include/assetdatabase/: AssetDatabase.hxx  AssetType.hxx
core/editor/assetdatabase/src/: AssetDatabase.cxx
core/editor/assetpipeline/: CMakeLists.txt
core/editor/assetpipeline/include/assetpipeline/: AssetPipeline.hxx
core/editor/assetpipeline/src/: AssetPipeline.cxx
core/editor/assetpipeline/src/loaders/: CubemapLoader.cxx  MaterialLoader.cxx  ModelLoader.cxx  PhysicsMaterialLoader.cxx  ShaderLoader.cxx  TextureLoader.cxx
core/engine/: CMakeLists.txt
core/engine/include/playground/: AssetManager.hxx  Constants.hxx  DrawCallBatcher.hxx  ECS.hxx  Engine.hxx  GameObject.hxx  InputManager.hxx  PhysicsManager.hxx  SceneManager.hxx
core/engine/include/playground/components/: BoxColliderComponent.hxx  MeshComponent.hxx  RotationComponent.hxx  StaticBodyComponent.hxx
core/engine/include/playground/systems/: AudioListenerSystem.hxx  AudioSourceSystem.hxx  BoxColliderUpdateSystem.hxx  RigidBodyUpdateSystem.hxx
core/engine/modules/: CMakeLists.txt
core/engine/modules/assetloader/: CMakeLists.txt
core/engine/modules/assetloader/src/: AssetLoader.cxx
core/engine/modules/audio/: CMakeLists.txt
core/engine/modules/audio/src/: Audio.cxx  AudioClip.cxx  AudioListener.cxx  AudioSource.cxx
core/engine/modules/events/: CMakeLists.txt
core/engine/modules/events/src/: Events.cxx
core/engine/modules/input/: CMakeLists.txt
core/engine/modules/input/src/: GameInputHandler.cxx  Input.cxx  RawInputHandler.cxx
core/engine/modules/io/: CMakeLists.txt
core/engine/modules/logger/: CMakeLists.txt
core/engine/modules/math/: CMakeLists.txt
core/engine/modules/physics/: CMakeLists.txt
core/engine/modules/profiler/: CMakeLists.txt
core/engine/modules/rendering/: CMakeLists.txt
core/engine/modules/shared/: CMakeLists.txt
core/engine/modules/system/: CMakeLists.txt
core/engine/modules/ui/: CMakeLists.txt
core/engine/src/: AssetManager.cxx  DrawCallbatcher.cxx  ECS.cxx  Engine.cxx  GameObject.cxx  InputManager.cxx  PhysicsManager.cxx  SceneManager.cxx
core/engine/src/systems/: AudioListenerSystem.cxx  AudioSourceSystem.cxx  BoxColliderUpdateSystem.cxx  HierarchySystem.cxx  RenderSystem.cxx  RigidBodyUpdateSystem.cxx  StaticBodyUpdateSystem.cxx
engine/native/: CMakeLists.txt
engine/native/include/playground/: AssetManager.hxx  Constants.hxx  DrawCallBatcher.hxx  ECS.hxx  InputManager.hxx  PhysicsManager.hxx
engine/native/modules/: CMakeLists.txt
engine/native/modules/assetloader/: CMakeLists.txt
engine/native/modules/audio/: CMakeLists.txt
engine/native/modules/events/: CMakeLists.txt
engine/native/modules/input/: CMakeLists.txt
engine/native/modules/math/: CMakeLists.txt
engine/native/modules/physics/: CMakeLists.txt
engine/native/modules/profiler/: CMakeLists.txt
engine/native/modules/rendering/: CMakeLists.txt
engine/native/modules/shared/: CMakeLists.txt
engine/native/modules/system/: CMakeLists.txt
engine/native/modules/ui/: CMakeLists.txt
engine/native/src/: AssetManager.cxx  DrawCallbatcher.cxx  ECS.cxx  Engine.cxx  InputManager.cxx  PhysicsManager.cxx
engine/native/src/systems/: AudioListenerSystem.cxx  AudioSourceSystem.cxx  CameraSystem.cxx  HierarchySystem.cxx  RenderSystem.cxx  RigidBodyUpdateSystem.cxx  StaticBodyUpdateSystem.cxx
scripting/engine/: CMakeLists.txt  Package.swift
scripting/engine/Macros/: CMakeLists.txt  ComponentMacro.swift  main.swift
scripting/engine/Native/: CMakeLists.txt
scripting/engine/Native/include/: Atomic.h  Defines.h  module.modulemap
scripting/engine/Native/src/: Atomic.cxx
scripting/engine/Playground/: AssetHandler.swift  Camera.swift  Component.swift  Engine.swift  EngineEnvironment.swift  Event.swift  EventHandler.swift  GameObject.swift  Input.swift  Logger.swift  Macros.swift  Mesh.swift  MeshComponent.swift  MeshComponentHandler.swift  NativeLookupTable.swift  Object.swift  Playground.sln  Playground.swift  PlaygroundCoreConfig.swift  Renderer.swift  SceneManager.swift  Space.swift  TestComponent.swift  Time.swift  Transform.swift  Vector2.swift  Vector3.swift  Vector4.swift
scripting/engine/Playground/Playground/: Camera.cs  Colour.cs  Component.cs  ComponentExceptions.cs  ComponentRetrieveScope.cs  ComponentSerializer.cs  DirectionalLight.cs  GameObject.cs  LayerConfig.cs  LayerMask.cs  Light.cs  Material.cs  Mesh.cs  MeshRenderer.cs  Object.cs  Playground.csproj  PointLight.cs  Quaternion.cs  RenderTexture.cs  Renderer.cs  SceneManager.cs  SerializeAttribute.cs  SkeletalMeshRenderer.cs  SpotLight.cs  Texture.cs  Time.cs  Transform.cs  Vector2.cs  Vector3.cs  Vector4.cs
scripting/engine/Playground/assets/: AssetHandler.swift  AssetType.swift
scripting/engine/Playground/core/: Profiler.swift  Time.swift
scripting/engine/Playground/ecs/: ComponentSerialisationManager.swift  ECSFilter.swift  ECSHandler.swift  Entity.swift
scripting/engine/Playground/input/: Input.swift
scripting/engine/Playground/internal/: Assembly.swift
scripting/engine/Playground/math/: Axis.swift  Mat4.swift  Math.swift  NativeMath.swift  Quaternion.swift  Vector2.swift  Vector3.swift  Vector4.swift
scripting/engine/Playground/physics/: Physics.swift
scripting/engine/Playground/rendering/: Colour.swift  DrawCall.swift  Material.swift  Model.swift  Renderer.swift  Rendering.swift
scripting/engine/Sources/Playground/: Camera.swift  Component.swift  Engine.swift  GameObject.swift  Input.swift  NativeLookupTable.swift  PlaygroundCoreConfig.swift  Quaternion.swift  Renderer.swift  SceneManager.swift  Transform.swift
tools/cooker/: CMakeLists.txt
tools/cooker/src/: Cooker.cxx
tools/model2prefab/: CMakeLists.txt
tools/model2prefab/src/: model2prefab.cxx
(+521 files in other folders)
